Fix alignment of title/content on the OIB / Site Settings bubble.

r442683 adopted a dynamic inset for the title in bubble dialogs in order
to align with the content under Harmony. Shortly after, r442779 landed
and adopted the default bubble title view for the site settings bubble,
rather than providing a custom one. Title and content should always be
aligned on the site settings bubble (regardless of Harmony), so it now
needs to be aware of whether the title in the dialog is inset or not.

Harmony will align title and content by default. Otherwise, to fix
alignment for the site settings bubble, explicitly set the title margins
to match the content margins.

BUG=681081

Review-Url: https://codereview.chromium.org/2640593002
Cr-Commit-Position: refs/heads/master@{#444474}

Former-commit-id: 57b697aa2605b6bbcb97352a32ccdb28204739e9